# SetsCalc

./: AUTHORS  Makefile.am  Makefile.in  README  README.md  configure  configure.ac
autom4te.cache/: output.1  requests  traces.0  traces.1
doc/: ChangeLog
man/: Makefile.am  SetsCalc.1
src/: Makefile.am  main.c
src/headers/: setscalc.h
src/libs/: math.c  menu.c  menu2.c  menu3.c  tree.c  tree2.c
src/scripts/: help.sh
